// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JoinKey > should match snapshot for auto join key 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "JoinKeyEmployee",
    "named": true,
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [
        "update",
        "upsert",
      ],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
  ],
  "filters": [],
  "generated": [
    {
      "generator": null,
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "namespace": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [
    {
      "findKeys": {
        "id": "departmentId",
      },
      "foreignConstructor": [Function],
      "foreignKey": "employees",
      "joinKeys": {
        "departmentId": "id",
      },
      "joinTable": null,
      "key": "department",
      "options": {
        "deferrable": false,
        "initiallyDeferred": false,
        "loading": {
          "multiple": "ignore",
          "single": "ignore",
        },
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onSoftDestroy": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "orderBy": null,
      "type": "ManyToOne",
    },
  ],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`JoinKey > should match snapshot for explicit join key 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "JoinKeyExplicitEmployee",
    "named": true,
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [
        "update",
        "upsert",
      ],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "departmentId",
      "max": null,
      "min": null,
      "mode": null,
      "name": "departmentId",
      "named": false,
      "nullable": true,
      "order": null,
      "precision": null,
      "readonly": [],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
  ],
  "filters": [],
  "generated": [
    {
      "generator": null,
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "namespace": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [
    {
      "findKeys": {
        "id": "departmentId",
      },
      "foreignConstructor": [Function],
      "foreignKey": "explicitEmployees",
      "joinKeys": {
        "departmentId": "id",
      },
      "joinTable": null,
      "key": "department",
      "options": {
        "deferrable": false,
        "initiallyDeferred": false,
        "loading": {
          "multiple": "ignore",
          "single": "ignore",
        },
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onSoftDestroy": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "orderBy": null,
      "type": "ManyToOne",
    },
  ],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;
